fix: dark theme and feat: added scroll listPokemon

--- a/client-pokebattle/public/index.html
+++ b/client-pokebattle/public/index.html
@@ -17,7 +17,7 @@
     </noscript>
     <div
       id="app"
-      class="font-body bg-red-100 dark:text-white dark:bg-slate-900 duration-300"
+      class="font-body dark:text-white dark:bg-primary-dark duration-300 transition-bg"
     ></div>
     <!-- built files will be auto injected -->
   </body>
